--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 body {
-    background-color: rebeccapurple;
+    display: grid;
+    grid-template-columns: 250px 2fr 1fr;
+
+    height: 100vh;
+}
+
+.sidebar {
+
 }
