--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ main {
     --gap: 1rem;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, 250px);
     grid-auto-rows: 50%;
     gap: var(--gap);
 
