--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,58 @@
+:root {
+    --pallete-dark: #181C14;
+    --pallete-gray: #3C3D37;
+    --pallete-green: #697565;
+    --pallete-cream: #ECDFCC;
+}
+
 body {
     display: grid;
     grid-template-columns: 250px 2fr 1fr;
 
     height: 100vh;
+    background: linear-gradient(0deg,rgba(24, 28, 20, 1) 0%, rgba(105, 117, 101, 1) 100%);
 }
 
-.sidebar {
+#sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
 
+    padding: 1rem;
+    margin: 15px;
+    border-radius: 20px;
+    border: 1px solid var(--pallete-cream);
+    background-color: var(--pallete-dark);
+    color: var(--pallete-cream);
+}
+
+#add-actions {
+    text-align: center;
+}
+
+#add-actions div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    padding: 1rem;
+    margin-top: 1rem;
+    border-radius: 10px;
+    border-top: 3px solid var(--pallete-cream);
+}
+
+#add-actions button {
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 10px;
+    background-color: var(--pallete-green);
+    color: var(--pallete-cream);
+    font-weight: bold;
+}
+
+#add-actions button:hover {
+    background-color: #5a6457;
 }
 
 main {
