--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body {
 
     height: 100vh;
     background: linear-gradient(0deg,rgba(24, 28, 20, 1) 0%, rgba(105, 117, 101, 1) 100%);
+    font-family: Verdana, sans-serif;
 }
 
 #sidebar {
@@ -20,11 +21,7 @@ body {
     gap: 100px;
 
     padding: 1rem;
-    margin: 15px;
-    border-radius: 20px;
     border: 1px solid var(--pallete-cream);
-    background-color: var(--pallete-dark);
-    color: var(--pallete-cream);
 }
 
 #add-actions {
@@ -55,6 +52,10 @@ body {
     background-color: #5a6457;
 }
 
+#projects-info {
+    text-align: center;
+}
+
 main {
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -73,4 +74,11 @@ main {
 }
 
 .project-card {
+}
+
+.basic-section {
+    margin: 15px;
+    background-color: var(--pallete-dark);
+    color: var(--pallete-cream);
+    border-radius: 20px;
 }
