--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,8 @@
     --pallete-gray: #3C3D37;
     --pallete-green: #697565;
     --pallete-cream: #ECDFCC;
+
+    --card-shadow: 4px 8px 8px #0000006D;
 }
 
 body {
@@ -116,6 +118,50 @@ main {
 }
 
 .project-card {
+    display: grid;
+    grid-template-columns: 1fr auto;
+
+    padding: 1rem;
+    border: none;
+    border-radius: 10px;
+    background-color: var(--pallete-gray);
+    color: var(--pallete-cream);
+}
+
+.project-card h3 {
+    height: min-content;
+    width: min-content;
+    border-bottom: 3px solid var(--pallete-green);
+}
+
+.project-card:hover {
+    box-shadow: var(--card-shadow);
+}
+
+.project-card button {
+    width: 2rem;
+    height: 1rem;
+    border: none;
+    background-color: transparent;
+    visibility: hidden;
+}
+
+.project-card:hover button {
+    visibility: visible;
+}
+
+.project-card:hover button:hover {
+    opacity: 0.8;
+}
+
+.project-card > div {
+    align-items: center;
+    justify-self: center;
+    grid-column: 1 / 3;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .basic-section {
