--- a/src/styles.css
+++ b/src/styles.css
@@ -76,6 +76,11 @@ main {
     grid-auto-rows: 130px;
 }
 
+.notes {
+    grid-template-columns: repeat(auto-fit, 500px);
+    grid-auto-rows: 300px;
+}
+
 #project-navigator > div {
     display: flex;
     justify-content: space-between;
@@ -205,6 +210,35 @@ main {
 
 .task-card select {
     justify-self: center;
+}
+
+.note-card {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 1rem;
+}
+
+.note-card *:not(div) {
+    justify-self: center;
+    grid-column: 1 / 3;
+}
+
+.note-card h3 {
+    width: 90%;
+    height: 3rem;
+    text-align: center;
+    border-bottom: 5px dashed var(--pallete-green);
+}
+
+.note-card p {
+    width: 90%;
+    overflow: hidden;
+    text-overflow: clip;
+}
+
+.note-card div {
+    grid-column: 2 / 3;
+    align-self: end;
 }
 
 .basic-section {
