--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,8 @@ body {
     display: grid;
     grid-template-columns: 250px 2fr 1fr;
 
-    height: 100vh;
+    position: relative;
+    min-height: 100vh;
     background: linear-gradient(0deg, rgba(24, 28, 20, 1) 0%, rgba(105, 117, 101, 1) 100%) fixed;
     font-family: Verdana, sans-serif;
 }
@@ -85,6 +86,11 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+#project-navigator {
+    position: sticky;
+    bottom: 0;
 }
 
 #btn-back {
@@ -336,6 +342,11 @@ dialog label {
 .view-window  p {
     margin-bottom: 1rem;
     color: var(--pallete-green);
+}
+
+#tasks-sorter {
+    position: sticky;
+    top: 15px;
 }
 
 .options {
