Let user filter tasks
Accept FilterBy in function provided in taskFilterService module.
React to user selected filters while displaying content in
contentDisplayController module.

Move reading sorting/filtering input to separate functions in
contentDisplayController module.

--- a/src/styles.css
+++ b/src/styles.css
@@ -349,6 +349,10 @@ dialog label {
     top: 15px;
 }
 
+#tasks-sorter ul {
+    margin-left: 1rem;
+}
+
 .options {
     padding: 1rem;
     border: 1px solid var(--pallete-cream);
