--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,9 @@
     --pallete-cream: #ECDFCC;
 
     --card-shadow: 4px 8px 8px #0000006D;
+    --card-border-radius: 10px;
+
+    --shared-gap: 1rem;
 }
 
 body {
@@ -17,13 +20,14 @@ body {
     font-family: Verdana, sans-serif;
 }
 
+/* sidebar and its contents */
 #sidebar {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 100px;
 
-    padding: 1rem;
+    padding: var(--shared-gap);
     border: 1px solid var(--pallete-cream);
 }
 
@@ -34,11 +38,11 @@ body {
 #add-actions div {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: var(--shared-gap);
 
-    padding: 1rem;
     margin-top: 1rem;
-    border-radius: 10px;
+    padding: var(--shared-gap);
+    border-radius: var(--card-border-radius);
     border-top: 3px solid var(--pallete-cream);
 }
 
@@ -46,26 +50,21 @@ body {
     padding: 1rem 2rem;
 }
 
-#add-actions button:hover {
-}
-
+/* top info bar*/
 #projects-info {
     text-align: center;
 }
-
+/* main section and its different variations */
 main {
     display: grid;
     grid-template-rows: auto 1fr auto;
-
 }
 
 #projects-container {
-    --gap: 1rem;
-
     display: grid;
-    gap: var(--gap);
+    gap: var(--shared-gap);
 
-    padding: var(--gap);
+    padding: var(--shared-gap);
 }
 
 .projects {
@@ -81,16 +80,16 @@ main {
     grid-template-columns: repeat(auto-fit, 500px);
     grid-auto-rows: 300px;
 }
+/* projects navigator and its contents*/
+#project-navigator {
+    position: sticky;
+    bottom: 0;
+}
 
 #project-navigator > div {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-#project-navigator {
-    position: sticky;
-    bottom: 0;
 }
 
 #btn-back {
@@ -106,7 +105,7 @@ main {
 #pager {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: var(--shared-gap);
     align-items: center;
     justify-content: space-between;
 
@@ -136,10 +135,10 @@ main {
 #curr-page{
     font-style: italic;
 }
-
+/* shared card styles */
 .card {
-    padding: 1rem;
-    border-radius: 10px;
+    padding: var(--shared-gap);
+    border-radius: var(--card-border-radius);
     background-color: var(--pallete-gray);
     color: var(--pallete-cream);
 }
@@ -163,7 +162,7 @@ main {
 .card:hover button:hover {
     opacity: 0.8;
 }
-
+/* different card types */
 .project-card {
     display: grid;
     grid-template-columns: 1fr auto;
@@ -182,9 +181,9 @@ main {
 
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: var(--shared-gap);
 }
-
+/* priority levels */
 .low {
     --color: #69ce5e;
 }
@@ -223,7 +222,7 @@ main {
 .note-card {
     display: grid;
     grid-template-columns: 1fr auto;
-    gap: 1rem;
+    gap: var(--shared-gap);
 }
 
 .note-card *:not(div) {
@@ -248,16 +247,16 @@ main {
     grid-column: 2 / 3;
     align-self: end;
 }
-
+/* shared modals styles */
 dialog {
     margin: auto;
-    padding: 1rem;
+    padding: var(--shared-gap);
     border: 5px dashed var(--pallete-green);
-    border-radius: 10px;
+    border-radius: var(--card-border-radius);
     background-color: var(--pallete-dark);
     color: var(--pallete-cream);
 }
-
+/* colors symbolizing different actions */
 .add {
     color: #75e139;
 }
@@ -272,7 +271,7 @@ dialog {
 
 dialog form {
     display: grid;
-    gap: 1rem;
+    gap: var(--shared-gap);
 }
 
 dialog h3,
@@ -289,7 +288,7 @@ dialog textarea {
     padding: 5px 10px;
     border: none;
     background-color: var(--pallete-cream);
-    border-radius: 10px;
+    border-radius: var(--card-border-radius);
 }
 
 dialog input:focus,
@@ -301,16 +300,13 @@ dialog textarea:focus {
 dialog div {
     justify-self: center;
     display: flex;
-    gap: 1rem;
+    gap: var(--shared-gap);
 
     margin-top: 1rem;
 }
 
 dialog button {
     padding: 5px 10px;
-}
-
-dialog::backdrop {
 }
 
 dialog form  p {
@@ -324,6 +320,10 @@ dialog label {
     padding-right: 20px;
 }
 
+textarea, input[type="text"], input[type="date"] {
+    box-shadow: 1px 1px 1px #999999;
+}
+/*  styles for view tasks/notes modals */
 .view-window {
     width: 600px;
     height: 300px;
@@ -343,7 +343,7 @@ dialog label {
     margin-bottom: 1rem;
     color: var(--pallete-green);
 }
-
+/* sorting/filtering right panel */
 #tasks-sorter {
     position: sticky;
     top: 15px;
@@ -352,15 +352,15 @@ dialog label {
 #tasks-sorter ul {
     margin-left: 1rem;
 }
-
+/* options with radio inputs pager/filtering/sorting */
 .options {
-    padding: 1rem;
+    padding: var(--shared-gap);
     border: 1px solid var(--pallete-cream);
     height: min-content;
 }
 
 .options fieldset {
-    padding: 1rem;
+    padding: var(--shared-gap);
     border: 4px solid var(--pallete-green);
 }
 
@@ -372,15 +372,15 @@ dialog label {
     padding: 2px 4px;
     font-weight: bold;
     background-color: var(--pallete-gray);
-    border-radius: 10px;
+    border-radius: var(--card-border-radius);
 }
 
 #items-options div {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: var(--shared-gap);
 }
-
+/* other shared styles */
 .basic-section {
     margin: 15px;
     background-color: var(--pallete-dark);
@@ -390,7 +390,7 @@ dialog label {
 
 .basic-btn {
     border: none;
-    border-radius: 10px;
+    border-radius: 12px;
     background-color: var(--pallete-green);
     color: var(--pallete-cream);
     font-weight: bold;
