Signalize that a given task is done
Add visual indications for finished tasks and
tasks which are in progress.

Extend status enum with assigned css sytles.
Apply styles to task cards in contentDisplayController.

--- a/src/styles.css
+++ b/src/styles.css
@@ -200,6 +200,16 @@ main {
     --color: #9861d3;
 }
 
+/* different task statues */
+
+.done {
+    text-decoration: line-through;
+}
+
+.in-progress {
+    text-decoration: underline;
+}
+
 .task-card {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
